# video-script-aligner

./: .gitignore  LICENSE  README.md  output.html  pyproject.toml
src/script_aligner/: cli.py  parser.py
src/script_aligner/aligners/: needleman.py  utils.py
test_data/: La-La-Land.txt  lala.srt
